Yaml/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: play
spec:
  containers:
    - image: meetupsul.azurecr.io/web:novalidate
      name: web
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: "256m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
      livenessProbe:
        httpGet:
          path: /health
          port: 80
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
