Yaml/02-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sul-web
  namespace: sul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: web
          image: mcr.azurecr.io/sul/web:1.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: internet
