Yaml/04-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: sul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: sul-back
          image: meetupsul.azurecr.io/web:novalidate
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
