Yaml/07-pod-no-schedule.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  tolerations:
    - key: "node-type"
      operator: "Exists"
      value: ""
      effect: "NoSchedule"
