Yaml/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sulweb-service
  namespace: play
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: web
