Yaml/05-web-api-serrvice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: sul
spec:
  ports:
    - port: 80
  selector:
    app: sul-back
