Yaml/05-web-kv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sul-web
  namespace: ntk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: web
          image: meetupsul.azurecr.io/web:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: internet
---
apiVersion: v1
kind: Service
metadata:
  name: sulweb-service
  namespace: ntk
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: web
