Yaml/05-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  namespace: play  
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - YOURDOMAIN.net
      secretName: ingress-tls-csi
  rules:
    - host: YOURDOMAIN.net
      http:
        paths:
          - backend:
              service:
                name: busybox-one
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: busybox-two
                port:
                  number: 80
            path: /two
            pathType: Prefix
